--- a/style.css
+++ b/style.css
@@ -1,1 +1,24 @@
-This is the landing page for The Odin Project course. 
+body {
+    background-color: #1F2937;
+    color: #F9FAF8;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.logo {
+    font-size: 24px;
+    font-weight: bolder;
+
+/* In the original image the information about the weight is missing. */
+
+}
+
+.top-links {
+    color: #E5E7EB;
+    font-size: 18px;
+}
