--- a/style.css
+++ b/style.css
@@ -2,23 +2,35 @@ body {
     background-color: #1F2937;
     color: #F9FAF8;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 20px;
+    margin-left: 200px;
+    margin-right: 200px;
 
+    display: flex;
+    flex-direction: column;
 }
 
 a {
     text-decoration: none;
-    color: white;
+    color: #E5E7EB;
+}
+
+header {
+    display: flex;    
 }
 
 .logo {
     font-size: 24px;
     font-weight: bolder;
-
 /* In the original image the information about the weight is missing. */
-
+    
 }
 
-.top-links {
-    color: #E5E7EB;
+.menu {
     font-size: 18px;
+    margin-left: auto;
+
+    display: flex;
+    gap: 20px;
 }
+
