--- a/style.css
+++ b/style.css
@@ -34,3 +34,31 @@ header {
     gap: 20px;
 }
 
+.first-section {
+    display: flex;
+    margin: 100px 0 ;
+}
+
+.first-section h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    margin: 0;
+}
+
+.first-section p {
+    font-size: 18px;
+    margin-top: 5px;
+}
+
+.first-section .CTA {
+    background-color: #3882F6;
+    border: none;
+    border-radius: 8px;
+   
+    color: #F9FAF8;
+    font-size: 16.5px;
+    font-weight: bolder;
+    padding: 0px;
+    height: 37.5px;
+    width: 130px;
+}
