--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@ body {
     background-color: #1F2937;
     color: #F9FAF8;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-top: 20px;
-    margin-left: 200px;
-    margin-right: 200px;
+    margin: 0;
 
     display: flex;
     flex-direction: column;
@@ -34,6 +32,13 @@ header {
     gap: 20px;
 }
 
+
+header, .first-section, .second-section {
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 20px;
+}
+
 .first-section {
     display: flex;
     margin: 100px 0 ;
@@ -61,4 +66,9 @@ header {
     padding: 0px;
     height: 37.5px;
     width: 130px;
+}
+
+.second-section {
+    background-color:#F9FAF8;
+    color: #1F2937;
 }
