--- a/style.css
+++ b/style.css
@@ -71,4 +71,35 @@ header, .first-section, .second-section {
 .second-section {
     background-color:#F9FAF8;
     color: #1F2937;
+    text-align: center;
+    padding-bottom: 100px;
+}
+
+.second-section h2 {
+    font-size: 38px;
+}
+
+.boxes-container {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.sub-boxes-container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50px;
+}
+
+.sub-boxes-container .text {
+    margin-top: 15px;
+    flex-grow: 0;
+}
+
+.box {
+    border: 3px solid #3882F6;
+    border-radius: 8px;
+    height: 150px;
+    width: 150px;
 }
