Add style to "Quote" section

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header {
 }
 
 
-header, .first-section, .second-section {
+header, .first-section, .second-section, .quote{
     padding-left: 200px;
     padding-right: 200px;
     padding-top: 20px;
@@ -81,7 +81,8 @@ header, .first-section, .second-section {
 
 .boxes-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 40px;
     
 }
 
@@ -102,4 +103,27 @@ header, .first-section, .second-section {
     border-radius: 8px;
     height: 150px;
     width: 150px;
+}
+
+.quote {
+    background-color: #E5E7EB;
+    padding-bottom: 100px;
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.quote-text {
+    padding-left: 100px;
+}
+
+.quote-name {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
 }
