--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header {
 }
 
 
-header, .first-section, .second-section, .quote{
+header, .first-section, .second-section, .quote, .fourth-section{
     padding-left: 200px;
     padding-right: 200px;
     padding-top: 20px;
@@ -44,29 +44,29 @@ header, .first-section, .second-section, .quote{
     margin: 100px 0 ;
 }
 
-.first-section h1 {
-    font-size: 48px;
-    font-weight: bolder;
-    margin: 0;
-}
+    .first-section h1 {
+        font-size: 48px;
+        font-weight: bolder;
+        margin: 0;
+    }
 
-.first-section p {
-    font-size: 18px;
-    margin-top: 5px;
-}
+    .first-section p {
+        font-size: 18px;
+        margin-top: 5px;
+    }
 
-.first-section .CTA {
-    background-color: #3882F6;
-    border: none;
-    border-radius: 8px;
-   
-    color: #F9FAF8;
-    font-size: 16.5px;
-    font-weight: bolder;
-    padding: 0px;
-    height: 37.5px;
-    width: 130px;
-}
+    .first-section .CTA {
+        background-color: #3882F6;
+        border: none;
+        border-radius: 8px;
+    
+        color: #F9FAF8;
+        font-size: 16.5px;
+        font-weight: bolder;
+        padding: 0px;
+        height: 37.5px;
+        width: 130px;
+    }
 
 .second-section {
     background-color:#F9FAF8;
@@ -75,9 +75,9 @@ header, .first-section, .second-section, .quote{
     padding-bottom: 100px;
 }
 
-.second-section h2 {
-    font-size: 38px;
-}
+    .second-section h2 {
+        font-size: 38px;
+    }
 
 .boxes-container {
     display: flex;
@@ -86,24 +86,24 @@ header, .first-section, .second-section, .quote{
     
 }
 
-.sub-boxes-container {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    flex-basis: 50px;
-}
+    .sub-boxes-container {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        flex-basis: 50px;
+    }
 
-.sub-boxes-container .text {
-    margin-top: 15px;
-    flex-grow: 0;
-}
+    .sub-boxes-container .text {
+        margin-top: 15px;
+        flex-grow: 0;
+    }
 
-.box {
-    border: 3px solid #3882F6;
-    border-radius: 8px;
-    height: 150px;
-    width: 150px;
-}
+    .box {
+        border: 3px solid #3882F6;
+        border-radius: 8px;
+        height: 150px;
+        width: 150px;
+    }
 
 .quote {
     background-color: #E5E7EB;
@@ -118,12 +118,55 @@ header, .first-section, .second-section, .quote{
     align-items: flex-end;
 }
 
-.quote-text {
-    padding-left: 100px;
+    .quote-text {
+        padding-left: 100px;
+    }
+
+    .quote-name {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+.fourth-section {
+    background-color: #F9FAF8;
+    height: 350px;
+    display: flex;
+    align-items: center;
 }
 
-.quote-name {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-}
+    .action-container {
+        background-color: #3882F6;
+        border-radius: 8px;
+        display: flex;
+        flex-grow: 1;
+        flex-basis: 200px;
+        height: 150px;
+        padding: 0 100px;
+        align-items: center;
+    }
+
+        .action-container h3 {
+            font-size: 22px;
+            margin: 0;
+        }
+
+        .action-container p {
+            margin: 0;
+            margin-top: 2px;
+        }
+
+        .action-container button {
+            margin-left: auto;
+            background-color: #3882F6;
+            border: 2px solid #F9FAF8;
+            border-radius: 8px;
+            color: #F9FAF8;
+            font-size: 16.5px;
+            font-weight: bolder;
+            padding: 0px;
+            height: 37.5px;
+            width: 130px;
+
+        }
+
